--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,42 @@
 
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
+/* NAVBAR */
+#navbar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    border-bottom: 1px solid transparent;
+}
+
+#navbar a{
+    color: #FFF !important;
+}
+
+
+/* HEADER */
+header#mainHeader{
+    position: relative;
+    padding-top: 200px;
+    padding-bottom: 100px;
+    background: no-repeat center center;
+    background-size: cover;
+    color: #FFF;
+}
+
+@media (min-width: 992px){
+    #navbar{
+        background: transparent !important;
+    }
+    #navbar a{
+        color: #FFF !important;
+    }
+}
+
+
+/* LISTADO DE CATEGORIAS */
 .categoria-lista i {
     color: #8800AA;
 }
